--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--Cori Jones, 03/29/2021, WEB140-0001-->
+<!--Cori Jones, 04/5/2021, WEB140-0001-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <header><h1>Vicious Cycles</h1></header>
+    <style>
+        body {
+            background-color: #E7FBFB;
+        }
+        header {
+            font-size: 4em;
+            text-align: center;
+            color: #010B5B;
+        }
+    </style>
 </head>
 <body>
     
